Fix wrapping of footer contact list

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -57,6 +57,10 @@ a > i.fa {
         li {
             margin: $small-spacing-unit;
             display: inline;
+
+            a {
+                display: inline-block;
+            }
         }
     }
 }
